test/error/iface/err4.rzy
interface
  Iface
    function funcA();
    function funcB();
  end

component
  Sub
    output
      out: Iface;
      
    implementation elementary
  end

  Err4
    implementation elementary
    
    component
      a : Sub;

    function a.out.funcA()
    end

    function a.out.funcB()
    end
    
    function a.out.funcC()
    end
    
  end

